change sqlite to sqlserver

--- a/CRM.App/appsettings.json
+++ b/CRM.App/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+    "DefaultConnection": "Data Source=DESKTOP-UB2D7UU;Initial Catalog=_crmreact;Integrated Security=true;"
   },
   "Logging": {
       "LogLevel": {
