--- a/CRM.App/ClientApp/package.json
+++ b/CRM.App/ClientApp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
     "bootstrap": "^5.1.3",
     "http-proxy-middleware": "^0.19.1",
     "jquery": "^3.6.0",
