add company table

--- a/CRM.App/ClientApp/.env
+++ b/CRM.App/ClientApp/.env
@@ -1,4 +1,6 @@
 BROWSER=none
+API_URL=https://localhost:44470
+AUTH_URL=https://localhost:44470
 
 # To support custom jsx pragma (for emotion)
 DISABLE_NEW_JSX_TRANSFORM=true
