--- a/CRM.App/ClientApp/package.json
+++ b/CRM.App/ClientApp/package.json
@@ -32,6 +32,10 @@
     "workbox-streams": "^5.1.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/user-event": "^14.2.1",
     "ajv": "^6.9.1",
     "cross-env": "^7.0.3",
     "eslint": "^7.25.0",
@@ -40,6 +44,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
+    "msw": "^0.42.3",
     "nan": "^2.14.2",
     "prettier": "^2.7.1",
     "typescript": "^4.2.4"
