--- a/CRM.App/CRM.App.csproj
+++ b/CRM.App/CRM.App.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+      <ProjectReference Include="..\CRM.App.Application\CRM.App.Application.csproj" />
       <ProjectReference Include="..\CRM.App.Infrastructure\CRM.App.Infrastructure.csproj" />
   </ItemGroup>
 
