--- a/CRM.App/CRM.App.csproj
+++ b/CRM.App/CRM.App.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="6.0.5" />
   </ItemGroup>
