--- a/CRM.App/ClientApp/package.json
+++ b/CRM.App/ClientApp/package.json
@@ -2,6 +2,7 @@
   "name": "crm.app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://localhost:7119",
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "bootstrap": "^5.1.3",
