--- a/CRM.App/ClientApp/package.json
+++ b/CRM.App/ClientApp/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "proxy": "https://localhost:7119",
   "dependencies": {
-    "@emotion/react": "^11.9.3",
+    "@emotion/react": "11.9.3",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
     "http-proxy-middleware": "^0.19.1",
