--- a/CRM.App/ClientApp/package.json
+++ b/CRM.App/ClientApp/package.json
@@ -13,6 +13,7 @@
     "oidc-client": "^1.11.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.4",
     "react-query": "^3.39.1",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.3.0",
